Add body to README and fix vim in HACKING

--- a/HACKING
+++ b/HACKING
@@ -1,4 +1,4 @@
-/* vim: set textwidth=78 formatoptions=actw2 autoindent */
+/* vim: set textwidth=78 formatoptions=actw2 autoindent: */
 Code Style
 ==========
 
