--- a/README
+++ b/README
@@ -50,11 +50,13 @@ along with Limbs Off.  If not, see <http://www.gnu.org/licenses/>.
 Contributing To the Project
 ===========================
 
-If you want to suggest a feature or report a bug, use 
-<https://plaimi.net/bugs>. If you want to discuss some more general things 
-regarding the game, use <https://plaimi.net/forum>. If you want to contribute 
-code, see HACKING. If you have questions regarding this or anything else, see 
-AUTHORS.
+If you want to report a bug, use <https://plaimi.net/bugs>. If you want to 
+discuss some more general things regarding the game, use 
+<https://plaimi.net/forum>. If you want to contribute code, see HACKING for 
+coding style guidelines, submission information and more. See TODO for 
+information on what needs to be done. If you want to suggest a feature (i.e. 
+you lack the skill/time to code it yourself), or have questions regarding 
+anything, check the forum, or see AUTHORS for contact information.
 
 
 /* vim: set textwidth=78 formatoptions=actw2 autoindent: */
