--- a/HACKING
+++ b/HACKING
@@ -67,8 +67,7 @@ probably to email a core developer from AUTHORS to discuss it properly. Either
 one should be able to help you decide.
 
 -"do while"s
-"while"-part of do-whiles are on the same line as '}'. Try to avoid "do 
-while"s altogether. We don't like them, and they aren't necessary.
+"while"-part of do-whiles are on the same line as '}'.
 
 WHEN IN DOUBT, FOLLOW THE STYLE OF THE OTHER CODE IN THE PROJECT!
 
