--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-About Limbs Off
+About Limbs Off - An amazing shooting game
 ===============
 
 Limbs Off is a gratis free software computer fighting game.
